# massivethreads-dm

./: Makefile.am  Makefile.in  configure  configure.ac  configure_fx10  make.bash
comm/: Makefile.in
comm/examples/: Makefile.in
comm/examples/one_sided/: Makefile.in
comm/examples/perf/: Makefile.in
comm/include/: Makefile.in  madm_global_clock.h  madm_logger.h  madm_logger_kind.h  madm_logger_stats.h  madm_logger_trace.h  madm_misc.h
comm/include/madm/: Makefile.am  Makefile.in  allocator.h  comm_system.h  ibv.h  madm_comm-decls.h  madm_comm-inl.h  madm_comm_acconfig.h.in  madm_comm_config.h
comm/include/mlog/: Makefile.in
comm/src/: Makefile.am  Makefile.in  gasnet_ext.cc  gasnet_ext.h  madm_comm.cc
comm/src/mpi3/: comm_base.cc  comm_memory.cc
comm/src/shmem/: comm_base.cc
madm/: Makefile.in
madm/examples/: Makefile.am  Makefile.in
madm/examples/mm/: Makefile.am  Makefile.in  mm.cc
madm/examples/plain/: Makefile.am  Makefile.in  plain.cc
madm/examples/stream/: Makefile.am  Makefile.in  stream.cc
madm/include/: Makefile.am  Makefile.in  madm-cxx.h  madm-dtbb.h  madm.h
madm/include/madm/: madm-cxx-inl.h  threadT-constr-decls.h  threadT-constr-decls.rb  threadT-constr-impl.h  threadT-constr-impl.rb  threadvoid-constr-inline.h  threadvoid-constr-inline.rb
madm/src/: Makefile.am  Makefile.in  madm.cc
mgas/: Makefile.am  Makefile.in
mgas/examples/: Makefile.am  Makefile.in
mgas/examples/am_p2p_rand/: Makefile  p2p_rand.c  topo.h
mgas/examples/bench_get/: Makefile  bench_get.c
mgas/examples/bitonic_sort/: Makefile  bitonic_sort.cpp  mgas_util.hpp
mgas/examples/mm/: Makefile.am  Makefile.in  config.h  mm.c  mm.h
mgas/examples/perf/: Makefile.am  Makefile.in  perf.c
mgas/examples/plain/: Makefile.am  Makefile.in  plain.c
mgas/include/: Makefile.am  Makefile.in  mgas.h  mgas_am.h  mgas_config.h  mgas_debug.h  mgas_misc.h  mgas_prof.h
mgas/src/: Makefile.am  Makefile.in  allocator.h  comm.c  comm.h  dist.h  ga_alloc.c  ga_alloc.h  gasnet_ext.h  globals.c  globals.h  globals.inl  gmt.c  gmt.h  gmt_entry.c  gmt_entry.h  handlers.h  kr_malloc.h  localize.h  localize_v.c  mcomm_compat.h  memory.c  memory.h  memory_v.c  memory_v.h  mgas.c  mgas_alloc.c  mgas_alloc.h  mgas_am.c  mgas_syncvar.c  misc.h  myth_alloc.c  myth_alloc.h  sys.c  sys.h  test_link.c  threadsafe.c  threadsafe.h  type_conversion.h
misc/: Makefile.in
misc/madmrun/: Makefile.in  madmrun
scripts/: alloc_and_run_obcx.bash  envs.bash  envs_obcx.bash  run_obcx.bash
uth/: Makefile.in
uth/examples/: Makefile.in
uth/include/: Makefile.in  uth-dtbb.h
uth/include/uth/: Makefile.am  Makefile.in  future-inl.h  future.h  madi-inl.h  madi.h  prof.h  thread-inl.h  thread.h  uth_comm.h  uth_config.h
uth/include/uth/uni/: Makefile.am  Makefile.in  context.h  context_aarch64.h  context_x86_64.h  taskq-inl.h  taskq.h  worker-inl.h  worker.h
uth/src/: Makefile.in  madi.cc  process.cc  uth_comm.cc
(+22 files in other folders)
