
defines=

lib_LTLIBRARIES = libmadm.la
libmadm_la_SOURCES = \
    madm.cc

libmadm_la_CPPFLAGS  = -I$(top_srcdir)/madm/include \
                       -I$(top_srcdir)/madm/src \
                       -I$(top_builddir)/madm/include \
                       -I$(top_srcdir)/comm/include \
                       -I$(top_srcdir)/uth/include \
		       -I$(top_srcdir)/mgas/include \
		       -Wundef \
		       $(defines)
libmadm_la_CXXFLAGS  =
libmadm_la_CCASFLAGS =
libmadm_la_LDFLAGS   =

