SUBDIRS = uni

otherincludedir = $(includedir)/uth

otherinclude_HEADERS = \
    debug.h \
    future-inl.h \
    future.h \
    iso_space.h \
    iso_space-inl.h \
    madi-inl.h \
    madi.h \
    misc.h \
    process-inl.h \
    process.h \
    uth-inl.h \
    uth_comm-inl.h \
    uth_comm.h \
    uth_config.h \
    uth_options.h

